<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_permission"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.PermissionFragment">

    <TextView
        android:id="@+id/fragment_permission_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="30dp"
        android:text="@string/setup_permission_text"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <Button
        android:id="@+id/fragment_permission_grant_permission"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        style="@style/Widget.MaterialComponents.Button.Icon"
        app:icon="@drawable/ic_add_24dp"
        android:enabled="true"
        android:text="@string/setup_permission_grant_permission"
        app:layout_constraintEnd_toEndOf="@+id/fragment_permission_text"
        app:layout_constraintStart_toStartOf="@+id/fragment_permission_text"
        app:layout_constraintTop_toBottomOf="@+id/fragment_permission_text" />




    <!-- Next Button -->
    <Button
        android:id="@+id/fragment_permission_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:enabled="false"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/setup_button_next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Back Button -->
    <Button
        android:id="@+id/fragment_permission_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="16dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:text="@string/setup_button_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>